k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedidos
  labels:
    app: pedidos
spec:
  type: ClusterIP
  selector:
    app: pedidos
  ports:
    - name: http
      port: 80
      targetPort: http
