k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pedidos
spec:
  podSelector:
    matchLabels:
      app: pedidos
  policyTypes: ["Ingress"]
  ingress:
    - ports:
        - port: 8080
          protocol: TCP
